# bil_hh_agent

./: .gitignore  Makefile  README.md  example.env  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: app.py  test_app.py
backend/: main.py
backend/app/: app.py  test_app.py
backend/db/: db.py  test_db.py
backend/engines/: db.py  postgres.py  test_db.py
backend/facades/: chatgpt.py  hh.py
backend/middlewares/: tx.py
backend/repositories/: test_user.py  user.py
backend/repositories/models/: base.py  user.py
backend/routers/: auth.py  test_auth.py
backend/schemas/: auth.py
backend/services/: auth.py  test_auth.py
docs/: db.puml
engines/: db.py  test_db.py
facades/: hh.py
middlewares/: logging.py
migrations/: 001_create_users_table.sql  002_create_user_profiles_table.sql  004_create_responses_table.sql
postgres/migrations/migrations/: 001_create_users.sql  003_create_vacancies_table.sql  004_create_applications.sql  005_create_hh_tokens_table.sql  005_create_user_vacancy_scores.sql
repositories/: test_user.py  user.py
repositories/models/: user.py
routers/: auth.py  test_auth.py
services/: auth.py  test_auth.py
